完成 问题列表 模块的开发

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -179,6 +179,10 @@
                     pathn = "@(Url.Action("ReplyRepairIndex", "Repair"))",
                         i = 0;
                     break; 
+                case "#listProblem":
+                    pathn = "@(Url.Action("ProblemListIndex", "Repair"))",
+                        i = 0;
+                    break; 
                 default:
                     pathn = "@(Url.Action("GroupIndex", "Group"))",
                         i = 0;
