--- a/888repair/Views/Repair/ITRepairVw.cshtml
+++ b/888repair/Views/Repair/ITRepairVw.cshtml
@@ -333,7 +333,7 @@
 
         reloadDate();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
         
         ////自定义验证规则
         //form.verify({
