--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -17,7 +17,9 @@
     </style>
 </head>
 <body>
-    <hr>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>回复问题</legend>
+    </fieldset>
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
             <div class="layui-inline">
@@ -87,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="layui-form-item">           
+        <div class="layui-form-item">
             <div class="layui-inline" id="test6">
                 <label class="layui-form-label">填表时间</label>
                 <div class="layui-input-inline">
