给每个页面添加title 提示当前为哪个菜单

--- a/888repair/Views/Repair/ITRepairVw.cshtml
+++ b/888repair/Views/Repair/ITRepairVw.cshtml
@@ -31,7 +31,7 @@
 </head>
 <body>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>Fill in the problem 填写问题</legend>
+        <legend>Fill in the problem 填写问题&nbsp;&nbsp;&nbsp;&nbsp;(IT资讯类)</legend>
     </fieldset>
     <table style="border:medium double #000000;border-spacing: 1px;" border="1">
         <tr>
