--- a/888repair/Views/Repair/RepairDetailVw.cshtml
+++ b/888repair/Views/Repair/RepairDetailVw.cshtml
@@ -31,7 +31,7 @@
 </head>
 <body>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>Fill in the problem 报修单详情</legend>
+        <legend>Repair Problem Details 报修单详情</legend>
     </fieldset>
     <br />
     <hr />
