--- a/888repair/Views/Repair/RersonalProblemIndex.cshtml
+++ b/888repair/Views/Repair/RersonalProblemIndex.cshtml
@@ -17,7 +17,9 @@
     </style>
 </head>
 <body>
-    <hr>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>个人问题列表</legend>
+    </fieldset>
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
             <div class="layui-inline">
