--- a/888repair/Views/Area/AreaMatchIndex.cshtml
+++ b/888repair/Views/Area/AreaMatchIndex.cshtml
@@ -18,7 +18,9 @@
     </style>
 </head>
 <body>
-    <hr>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>辖区配对维护</legend>
+    </fieldset>
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
             <div class="layui-inline">
