--- a/888repair/Views/Director/DirectorIndex.cshtml
+++ b/888repair/Views/Director/DirectorIndex.cshtml
@@ -14,7 +14,9 @@
     </style>
 </head>
 <body>
-    <hr>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>负责人维护</legend>
+    </fieldset>
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
             <div class="layui-inline">
