--- a/888repair/Views/Repair/LogRepairVw.cshtml
+++ b/888repair/Views/Repair/LogRepairVw.cshtml
@@ -33,7 +33,7 @@
 </head>
 <body>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>Fill in the problem 填写问题</legend>
+        <legend>Fill in the problem 填写问题&nbsp;&nbsp;&nbsp;&nbsp;(Logistics总务后勤类)</legend>
     </fieldset>
     <table style="border:medium double #000000;border-spacing: 1px;" border="1">
         <tr>
