修改提示导出的文字

--- a/888repair/Views/Repair/ProblemListIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListIndex.cshtml
@@ -103,11 +103,9 @@
         </div>
     </form>
     <hr><br />
-    <label style="color:red;font-size:medium">
-        导出的EXCEL数据为当前查询条件下所能查到的数据。您也可以选择数据表格右上方三个按钮中中间的导出按钮,使用layui自带的导出方法导出。<br>
-        The exported EXCEL data is the data that can be found under the current query conditions.<br />
-        You can also choose the export button in the middle of the three buttons on the top right of the data table and use the export method provided by Layui to export it
-    </label>
+        <label style="color:red;font-size:medium">
+            提示：导出的EXCEL数据为当前查询条件下所能查到的数据。您也可以选择数据表格右上方三个按钮中中间的导出按钮,使用layui自带的导出方法导出。<br>
+        </label>
     <div class="layui-btn-group" style="margin-left:1250px">
         <button class="layui-btn layui-btn-sm" id="btn_search"><i class="layui-icon">查询&nbsp;&#xe615;</i></button>
         <button class="layui-btn layui-btn-sm" id="btn_export"><i class="layui-icon">导出&nbsp;&#xe67d;</i></button>
