--- a/888repair/Views/Repair/RepairDetailVw.cshtml
+++ b/888repair/Views/Repair/RepairDetailVw.cshtml
@@ -103,6 +103,8 @@
                     <div class="layui-input-inline">
                         <textarea id="ResponseContent" style="font-size:large;width:300%;height:170px" readonly />
                     </div>
+                    <div id="imgId">
+                    </div>
                 </td>
             </tr>
             <tr height="200px">
@@ -152,6 +154,27 @@
     </div>
 </body>
 <script>
+
+    function loadImg() {
+        //遍历图片 PhotoPath
+        if (localStorage.getItem("PhotoPath") != null && localStorage.getItem("PhotoPath") != '' && localStorage.getItem("PhotoPath") != 'null') {
+            var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+            var PhotoPathS = localStorage.getItem("PhotoPath");
+            PhotoPathS = PhotoPathS.substring(0, PhotoPathS.length - 1);
+            var files = PhotoPathS.split(";");
+            var imgId = document.getElementById("imgId");
+            var url = root;
+            for (var i = 0; i < files.length; i++) {
+                var name = files[i];
+                var img = document.createElement("img");
+                img.style = "width:120px;height:120px;";
+                img.className = "imgview";
+                img.src = url + name;
+                imgId.appendChild(img);
+            }
+        }
+    }
+    
     layui.use(['upload', 'element', 'layer', 'laydate','form'], function () {
         var form = layui.form;
         var layer = layui.layer;
@@ -159,6 +182,12 @@
         var laydate = layui.laydate;
 
         loadOption();
+
+        loadImg();
+
+        $("body").on("click", ".imgview", function (e) {
+            layer.photos({ photos: { "data": [{ "src": e.target.src }] } });
+        });
 
         function loadOption() {     
             $("#OpStatus").empty();
