完成问题回复列表页面

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -56,6 +56,7 @@
                     <li class="layui-nav-item current" data-id="personalProblem"><a class="layui-nav-item ">个人问题列表</a></li>
                     <li class="layui-nav-item current" data-id="replyProblem"><a class="layui-nav-item ">回复问题</a></li>
                     <li class="layui-nav-item current" data-id="listProblem"><a class="layui-nav-item ">问题列表</a></li>
+                    <li class="layui-nav-item current" data-id="ProblemRepair"><a class="layui-nav-item ">问题列表维护</a></li>
                     <li class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
                     <li class="layui-nav-item" data-id="kindMatch"><a class="layui-nav-item ">业管配对维护</a></li>
                     @*<li class="layui-nav-item" data-id="fillQuestion"><a class="layui-nav-item ">业管配对维护</a></li>*@
@@ -183,9 +184,13 @@
                     pathn = "@(Url.Action("ProblemListIndex", "Repair"))",
                         i = 0;
                     break; 
+                case "#ProblemRepair":
+                    pathn = "@(Url.Action("ProblemAllVw", "Repair"))",
+                        i = 0;
+                    break; 
                 default:
                     pathn = "@(Url.Action("GroupIndex", "Group"))",
-                        i = 0;
+                        i = 0; 
                     break;
             }
             $("#content").load(pathn);//加载相应内容
