--- a/888repair/Views/Repair/ProblemAllDetailVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllDetailVw.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "ReplyRepairDetailVw";
+    ViewBag.Title = "ProblemAllDetailVw";
 }
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>回复问题</title>
+    <title>问题列表维护</title>
     <style>
         body {
             padding: 32px; /*overflow-y: scroll;*/
@@ -31,7 +31,7 @@
 </head>
 <body>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>回复问题</legend>
+        <legend>问题列表维护</legend>
     </fieldset>
     <br />
     <hr />
@@ -137,12 +137,6 @@
                         </div>
                     </div>
                     <br />
-                    <div id="btngroup" hidden="hidden">
-                        <button type="button" id="TransferProblem" class="layui-btn layui-btn-primary layui-border-green" style="margin-left:20px">转派任务</button>
-                        <button type="button" id="RejectTask" class="layui-btn layui-btn-primary layui-border-green" style="margin-left:20px">驳回任务</button>
-                        <button type="button" id="RejectEnd" class="layui-btn layui-btn-primary layui-border-green" style="margin-left:20px">驳回至使用者</button>
-                    </div>
-                    <br />
                 </td>
             </tr>
             <tr height="30px">
@@ -174,41 +168,6 @@
     </div>
 </body>
 
-<div class="layui-form" style="display:none" id="transferWindow">
-    <br /><br />
-    <form class="layui-form-item">
-         <div class="layui-inline">
-            <label class="layui-form-label">转派人&nbsp;&nbsp;<label style="color:red">*</label></label>
-            <div class="layui-input-inline" style="width:300px">
-                <select ID="OpEmpNo" name="OpEmpNo" lay-verify="required"  lay-search="">
-                    <option value=""></option>
-                </select>
-            </div>
-        </div>
-        <br /> <br />
-        <div class="layui-inline">
-            <label class="layui-form-label">转派意见&nbsp;&nbsp;<label style="color:red">*</label></label>
-            <div class="layui-input-inline">
-                <textarea type="text" name="opinion" id="opinion" autocomplete="off" class="layui-input" style="height:100px;width:530px" lay-verify="required"/>
-            </div>
-        </div>
-        <button class="layui-layer-btn0" id="btn_transfer" style="display:none" lay-submit lay-filter="demo2"></button>
-    </form>
-</div>
-
-<div class="layui-form" style="display:none" id="rejecttaskWindow">
-    <br /><br />
-    <form class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">驳回意见&nbsp;&nbsp;<label style="color:red">*</label></label>
-            <div class="layui-input-inline">
-                <textarea type="text" name="opiniontask" id="opiniontask" autocomplete="off" class="layui-input" style="height:100px;width:530px" lay-verify="required" />
-            </div>
-        </div>
-        <button class="layui-layer-btn0" id="btn_rejecttask" style="display:none" lay-submit lay-filter="demo3"></button>
-    </form>
-</div>
-
 <div class="layui-form" style="display:none" id="rejectendWindow">
     <br /><br />
     <form class="layui-form-item">
@@ -222,7 +181,7 @@
     </form>
 </div>
 <script>
-    
+
     function loadImg() {
         //遍历图片 PhotoPath
         if (localStorage.getItem("PhotoPath") != null && localStorage.getItem("PhotoPath") != '' && localStorage.getItem("PhotoPath") != 'null') {
@@ -253,7 +212,7 @@
         loadOption();
 
         loadImg();
-        
+
         $("body").on("click", ".imgview", function (e) {
             layer.photos({ photos: { "data": [{ "src": e.target.src }] } });
         });
@@ -447,111 +406,6 @@
             return false;
         });
 
-        form.on('submit(demo2)', function () {
-            var model = {
-                "NewReplyContent": $("#opinion").val(),
-                "Status": $("#OpStatus").val(),
-                "RepairId": localStorage.getItem("RepairId"),
-                "ChargeEmpname": document.getElementById("OpEmpNo").options[document.getElementById("OpEmpNo").selectedIndex].text,
-                "ChargeEmpno": $("#OpEmpNo").val(),
-            };
-                $.ajax({
-                type: 'post',
-                url: "@(Url.Action("TransferProblem", "Repair"))",
-                data: JSON.stringify(model),
-                async: false,
-                dataType: "json",
-                processData: false,
-                contentType: 'application/json',
-                beforeSend: function () {
-                    $('#btn_submit').addClass("layui-btn-disabled").attr("disabled", true);
-                },
-                success: function (result) {
-                    if (result.IsSuccess) {
-                        alert("转派成功");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
-                        $("#content").load(url);
-                    }
-                    else {
-                        alert(result.Msg);
-                    }
-                }
-
-                });
-
-            return false;
-        });
-
-        form.on('submit(demo3)', function () {
-            var model = {
-                "NewReplyContent": $("#opiniontask").val(),
-                "Status": $("#OpStatus").val(),
-                "RepairId": localStorage.getItem("RepairId"),
-                "ChargeEmpno": localStorage.getItem("ChargeEmpno"),
-            };
-                $.ajax({
-                type: 'post',
-                url: "@(Url.Action("RejectTask", "Repair"))",
-                data: JSON.stringify(model),
-                async: false,
-                dataType: "json",
-                processData: false,
-                contentType: 'application/json',
-                beforeSend: function () {
-                    $('#btn_submit').addClass("layui-btn-disabled").attr("disabled", true);
-                },
-                success: function (result) {
-                    if (result.IsSuccess) {
-                        alert("成功驳回任务");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
-                        $("#content").load(url);
-                    }
-                    else {
-                        alert(result.Msg);
-                    }
-                }
-
-                });
-
-            return false;
-        });
-
-        form.on('submit(demo4)', function () {
-            var model = {
-                "NewReplyContent": $("#opinionend").val(),
-                "Status": $("#OpStatus").val(),
-                "RepairId": localStorage.getItem("RepairId"),
-                "ChargeEmpno": localStorage.getItem("ChargeEmpno"),
-                "ChargeEmpname": localStorage.getItem("ChargeEmpname"),
-                "ResponseEmpname": localStorage.getItem("ResponseEmpname"),
-            };
-                $.ajax({
-                type: 'post',
-                url: "@(Url.Action("RejectEnd", "Repair"))",
-                data: JSON.stringify(model),
-                async: false,
-                dataType: "json",
-                processData: false,
-                contentType: 'application/json',
-                beforeSend: function () {
-                    $('#btn_submit').addClass("layui-btn-disabled").attr("disabled", true);
-                },
-                success: function (result) {
-                    if (result.IsSuccess) {
-                        alert("成功驳回至使用者");
-                         var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
-                        $("#content").load(url);
-                    }
-                    else {
-                        alert(result.Msg);
-                    }
-                }
-
-                });
-
-            return false;
-        });
-
         function render() {
             // 封装函数-表单更新渲染
             layui.use('form', function () {
@@ -585,55 +439,9 @@
                 }
             });
         });
-
-        $('#RejectTask').click(function () {
-            layer.open({
-                title: '驳回任务',
-                area: ['40%', '35%'],
-                content: $("#rejecttaskWindow"),
-                shade: 0.0,
-                type: 1,
-                btn: ['确定', '重置'],
-                btn1: function (index, layero) {
-                    var formSubmit = $("#rejecttaskWindow");
-                    var submited = formSubmit.find('button')[0];
-                    submited.click();
-                },
-                btn2: function (index, layero) {
-                    $("#opiniontask").val("");
-                    return false;
-                },
-                cancel: function (layero, index) {
-                    layer.closeAll();
-                }
-            });
-        });
-
-        $('#RejectEnd').click(function () {
-            layer.open({
-                title: '驳回至使用者',
-                area: ['40%', '35%'],
-                content: $("#rejectendWindow"),
-                shade: 0.0,
-                type: 1,
-                btn: ['确定', '重置'],
-                btn1: function (index, layero) {
-                    var formSubmit = $("#rejectendWindow");
-                    var submited = formSubmit.find('button')[0];
-                    submited.click();
-                },
-                btn2: function (index, layero) {
-                    $("#opinionend").val("");
-                    return false;
-                },
-                cancel: function (layero, index) {
-                    layer.closeAll();
-                }
-            });
-        });
-
+        
         $("#btn_back").on("click", function () {
-             var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+             var url = "@(Url.Action("ProblemAllVw", "Repair"))";
              $("#content").load(url);
         });
     });
