--- a/888repair/src/css/layui.css
+++ b/888repair/src/css/layui.css
@@ -266,7 +266,7 @@ a cite{font-style: normal; *cursor:pointer;}
 .layui-layout-admin .layui-main{width: auto; margin: 0 15px;}
 .layui-layout-admin .layui-footer{position: fixed; left: 200px; right: 0; bottom: 0; z-index: 990; height: 44px; line-height: 44px; padding: 0 15px; box-shadow: -1px 0 4px rgb(0 0 0 / 12%); background-color: #FAFAFA;}
 .layui-layout-admin .layui-logo{position: absolute; left: 0; top: 0; width: 200px; height: 100%; line-height: 60px; text-align: center; color: #009688; font-size: 16px; box-shadow: 0 1px 2px 0 rgb(0 0 0 / 15%);}
-.layui-layout-admin .layui-header .layui-nav{background: none;}
+.layui-layout-admin .layui-header .layui-nav{background: #cc6699;}
 .layui-layout-left{position: absolute !important; left: 200px; top: 0;}
 .layui-layout-right{position: absolute !important; right: 0; top: 0;}
 
@@ -566,12 +566,12 @@ a cite{font-style: normal; *cursor:pointer;}
 
 
 /* 背景颜色 */
-.layui-bg-red{background-color: #FF5722 !important; color: #fff!important;} /*赤*/
+.layui-bg-red{background-color: #FFD5D5 !important; color: #fff!important;} /*赤*/
 .layui-bg-orange{background-color: #FFB800!important; color: #fff!important;} /*橙*/
-.layui-bg-green{background-color: #009688!important; color: #fff!important;} /*绿*/
+.layui-bg-green{background-color: #EFFFBF!important; color: #fff!important;} /*绿*/
 .layui-bg-cyan{background-color: #2F4056!important; color: #fff!important;} /*青*/
 .layui-bg-blue{background-color: #1E9FFF!important; color: #fff!important;} /*蓝*/
-.layui-bg-black{background-color: #393D49!important; color: #fff!important;} /*深*/
+.layui-bg-black{background-color: #993366!important; color: #fff!important;} /*深*/
 .layui-bg-gray{background-color: #FAFAFA!important; color: #5F5F5F!important;} /*浅*/
 
 /* 边框 */
@@ -662,7 +662,7 @@ a cite{font-style: normal; *cursor:pointer;}
 
 */
 
-.layui-btn{display: inline-block; vertical-align: middle; height: 38px; line-height: 38px; border: 1px solid transparent; padding: 0 18px; background-color: #009688; color: #fff; white-space: nowrap; text-align: center; font-size: 14px; border-radius: 2px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;}
+.layui-btn{display: inline-block; vertical-align: middle; height: 38px; line-height: 38px; border: 1px solid transparent; padding: 0 18px; background-color: #C24986; color: #fff; white-space: nowrap; text-align: center; font-size: 14px; border-radius: 2px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;}
 .layui-btn:hover{opacity: 0.8; filter:alpha(opacity=80); color: #fff;}
 .layui-btn:active{opacity: 1; filter:alpha(opacity=100);}
 .layui-btn+.layui-btn{margin-left: 10px;}
@@ -680,7 +680,7 @@ a cite{font-style: normal; *cursor:pointer;}
 /* 原始 */.layui-btn-primary{border-color: #d2d2d2; background: none; color: #5F5F5F;}
 .layui-btn-primary:hover{border-color: #009688; color: #333;}
 /* 百搭 */.layui-btn-normal{background-color: #1E9FFF;}
-/* 暖色 */.layui-btn-warm{background-color: #FFB800;}
+/* 暖色 */.layui-btn-warm{background-color: #F90;}
 /* 警告 */.layui-btn-danger{background-color: #FF5722;}
 /* 选中 */.layui-btn-checked{background-color: #5FB878;}
 /* 禁用 */.layui-btn-disabled, .layui-btn-disabled:hover, .layui-btn-disabled:active{border-color: #eee !important; background-color: #FBFBFB !important; color: #d2d2d2 !important; cursor: not-allowed !important; opacity: 1;}
@@ -897,7 +897,7 @@ a cite{font-style: normal; *cursor:pointer;}
 .layui-laypage .layui-laypage-spr{color:#999; font-weight: 700;}
 .layui-laypage .layui-laypage-curr{position: relative;}
 .layui-laypage .layui-laypage-curr em{position: relative; color: #fff;}
-.layui-laypage .layui-laypage-curr .layui-laypage-em{position: absolute; left: -1px; top: -1px; padding: 1px; width: 100%; height: 100%; background-color: #009688; }
+.layui-laypage .layui-laypage-curr .layui-laypage-em{position: absolute; left: -1px; top: -1px; padding: 1px; width: 100%; height: 100%; background-color: #C24986; }
 .layui-laypage-em{border-radius: 2px;}
 .layui-laypage-prev em,
 .layui-laypage-next em{font-family: Sim sun; font-size: 16px;}
@@ -1175,7 +1175,7 @@ body .layui-table-tips .layui-layer-content{background: none; padding: 0; box-sh
 .layui-dropdown-shade{top: 0; left: 0; width: 100%; height: 100%; _height: expression(document.body.offsetHeight+"px"); position: fixed; _position: absolute; pointer-events: auto;}
 
 /** 导航菜单 **/
-.layui-nav{position: relative; padding: 0 15px; background-color: #393D49; color: #fff; border-radius: 2px; font-size: 0; box-sizing: border-box;}
+.layui-nav{position: relative; padding: 0 15px; background-color: #993366; color: #fff; border-radius: 2px; font-size: 0; box-sizing: border-box;}
 .layui-nav *{font-size: 14px;}
 .layui-nav .layui-nav-item{position: relative; display: inline-block; *display: inline; *zoom: 1; margin-top: 0; list-style: none; vertical-align: middle; line-height: 60px;}
 .layui-nav .layui-nav-item a{display: block; padding: 0 20px; color: #fff; color: rgba(255,255,255,.7); transition: all .3s; -webkit-transition: all .3s;}
@@ -1216,7 +1216,7 @@ body .layui-table-tips .layui-layer-content{background: none; padding: 0; box-sh
 .layui-nav-tree .layui-this>a,
 .layui-nav-tree .layui-this>a:hover,
 .layui-nav-tree .layui-nav-child dd.layui-this,
-.layui-nav-tree .layui-nav-child dd.layui-this a{background-color: #009688; color: #fff;}
+.layui-nav-tree .layui-nav-child dd.layui-this a{background-color: #C24986; color: #fff; font-weight: bold;text-shadow: 1px 2px 2px #000;}
 .layui-nav-tree .layui-this:after{display: none;}
 .layui-nav-tree .layui-nav-title a,
 .layui-nav-tree .layui-nav-title a:hover,
