--- a/888repair/Views/Repair/LogRepairVw.cshtml
+++ b/888repair/Views/Repair/LogRepairVw.cshtml
@@ -49,10 +49,10 @@
         </tr>
         <tr>
             <td>
-                H22080031
+                <span id="logempno"></span>
             </td>
             <td>
-                胡德知(dezhi_hu)
+                <span id="logusername"></span>
             </td>
             <td>
                 Logistics(总务后勤类)
@@ -337,6 +337,11 @@
 
         var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
 
+        var username = '@(Session["fullname"])';
+        var empno = '@(Session["EmpNo"])';
+        $("#logusername").html(username == "" ? "未登录" : username);
+        $("#logempno").html(empno == "" ? "未登录" : empno);
+
         ////自定义验证规则
         //form.verify({
         //    title: function (value) {
@@ -574,7 +579,7 @@
                 obj.preview(function (index, file, result) {
 
                     var tr = $(['<tr id="upload-' + index + '">'
-                        , '<td>' + datetime + '_' + "H22080031" + "_" + file.name + '</td>'
+                        , '<td>' + datetime + '_' + empno + "_" + file.name + '</td>'
                        // , '<td>' + file.name + '</td>'
                         , '<td>' + '<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">' + '</td>'
                         , '<td>' + (file.size / 1024).toFixed(1) + 'kb</td>'
